--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <div class="main-about">
             <div class="about-photo">
-                <img src="images/abdul.jpeg" alt="my photo">
+                <img src="images/waheed.jpeg" alt="my photo">
             </div>
             <div class="about-details">
                 <h3>I'm Abdul waheed khan and i'm a <span>fullstack-Developer</span></h3>
